--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,6 @@ ol {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  padding-bottom: 4px;
 }
 
 .result__video-container {
@@ -77,6 +76,7 @@ ol {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 .search-form {
@@ -178,6 +178,7 @@ ol {
   line-height: 100%;
   letter-spacing: 0;
   text-align: center;
+  min-height: 34px;
 }
 
 .button:hover {
@@ -202,14 +203,12 @@ ol {
 }
 
 .search-form__submit-button {
-  height: 34px;
   width: 194px;
   align-self: end;
 }
 
 .content__details {
-  width: 399px;
-  height: 534px;
+  width: 100%;
 }
 
 .title {
@@ -231,7 +230,7 @@ ol {
   gap: 30px;
   max-height: 298px;
   min-height: 298px;
-  overflow-y: scroll;
+  overflow-y: auto;
   margin-top: 23px;
   position: relative;
 }
@@ -264,17 +263,17 @@ ol {
   padding-top: 3px;
 }
 
-.content__list-item:focus {
-  outline: none;
-}
-
-.content__list-item:focus-visible {
-  outline: 1px solid #fff;
-}
-
 .content__card-link {
   display: block;
   text-decoration: none;
+}
+
+.ccontent__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
 }
 
 .content__card-link:hover {
@@ -297,6 +296,7 @@ ol {
   flex-grow: 2;
   overflow: hidden;
   color: #fff;
+  max-width: 196px;
 }
 
 .content__video-card-title {
@@ -326,10 +326,8 @@ ol {
   line-clamp: 4;
   display: -webkit-box;
   -webkit-box-orient: vertical;
-}
-
-.more-button {
-  min-height: 34px;
+  overflow: hidden;
+  overflow-wrap: break-word;
 }
 
 /* Кастомный скроллбар */
